--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <thead>
                 <tr>
                     <th align="left" style="padding-top: 24px; padding-bottom: 24px; padding-left: 40px;">
-                        <img style="height: 180px" src="./Imagens/logo_imagem_rock.jpg" alt="logo_imagem_rock">
+                        <img style="height: 180px" src="https://blog-rock-nine.vercel.app/Imagens/logo_imagem_rock.jpg" alt="logo_imagem_rock">
                     </th>
                     <th align="right" style="padding-top: 24px; padding-bottom: 24px; padding-right: 40px;" >
-                        <img style="height: 90px;" src="./Imagens/logo_escrito_rock.png" alt="logo_escrito_rock">
+                        <img style="height: 90px;" src="https://blog-rock-nine.vercel.app/Imagens/logo_escrito_rock.png" alt="logo_escrito_rock">
                     </th>
                 </tr>
             </thead>
@@ -36,7 +36,7 @@
                 <tr>
                     <td colspan="2" style="padding: 40px 70px;">
                         <div>
-                            <img style="height: 350px" src="./Imagens/Black_sabbath.jpg" alt="Black_sabbath">
+                            <img style="height: 350px" src="https://blog-rock-nine.vercel.app/Imagens/Black_sabbath.jpg" alt="Black_sabbath">
                         </div>
                         <center>
                         <p style="background-color: black; color: #fff;">
@@ -52,7 +52,7 @@
                                 </b>
                             </i>
                         </p>
-                        <a href="" style="background-color: blue; font-size: 16px; text-decoration: none; color: yellow; padding: 8px; border-radius: 6px; font-family: sans-serif; " >
+                        <a href="#" style="background-color: #0000ff; font-size: 16px; text-decoration: none; color: #ffff00; padding: 8px; border-radius: 6px; font-family: sans-serif; display: inline-block;">
                             <b>
                                 <i>
                                     Leia na integra
@@ -64,7 +64,7 @@
                 <tr>
                     <td colspan="2" style="padding: 40px 70px;">
                         <div>
-                            <img style="height: 350px" src="./Imagens/Iron_maiden.jpg" alt="Iron_maiden">
+                            <img style="height: 350px" src="https://blog-rock-nine.vercel.app/Imagens/Iron_maiden.jpg" alt="Iron_maiden">
                         </div>
                         <center>
                         <p style="background-color: black; color: #fff;">
@@ -80,7 +80,7 @@
                                 </b>
                             </i>
                         </p>
-                        <a href="" style="background-color: blue; font-size: 16px; text-decoration: none; color: yellow; padding: 8px; border-radius: 6px; font-family: sans-serif; " >
+                        <a href="#" style="background-color: #0000ff; font-size: 16px; text-decoration: none; color: #ffff00; padding: 8px; border-radius: 6px; font-family: sans-serif; display: inline-block;">
                             <b>
                                 <i>
                                     Leia na integra
@@ -92,7 +92,7 @@
                 <tr>
                     <td colspan="2" style="padding: 40px 70px;">
                         <div>
-                            <img style="height: 380px" src="./Imagens/Metallica.jpg" alt="Metallica">
+                            <img style="height: 380px" src="https://blog-rock-nine.vercel.app/Imagens/Metallica.jpg" alt="Metallica">
                         </div>
                         <center>
                         <p style="background-color: black; color: #fff;">
@@ -108,7 +108,7 @@
                                 </b>
                             </i>
                         </p>
-                        <a href="" style="background-color: blue; font-size: 16px; text-decoration: none; color: yellow; padding: 8px; border-radius: 6px; font-family: sans-serif; " >
+                        <a href="#" style="background-color: #0000ff; font-size: 16px; text-decoration: none; color: #ffff00; padding: 8px; border-radius: 6px; font-family: sans-serif; display: inline-block;">
                             <b>
                                 <i>
                                     Leia na integra
@@ -121,9 +121,9 @@
                     <tr>
                         <td colspan="2" style="padding: 40px 70px;">
                             <center>
-                                <a href="https://instagram.com"><img src="./Imagens/instagram.png" alt="instagram"></a>
-                                <a style="padding-left: 8px; padding-right: 8px;" href="https://facebook.com"><img src="./Imagens/facebook.png" alt="facebook"></a>
-                                <a href="https://twitter.com"><img src="./Imagens/twitter.png" alt="twitter"></a>
+                                <a href="https://instagram.com"><img src="https://blog-rock-nine.vercel.app/Imagens/instagram.png" alt="instagram"></a>
+                                <a style="padding-left: 8px; padding-right: 8px;" href="https://facebook.com"><img src="https://blog-rock-nine.vercel.app/Imagens/facebook.png" alt="facebook"></a>
+                                <a href="https://twitter.com"><img src="https://blog-rock-nine.vercel.app/Imagens/twitter.png" alt="twitter"></a>
                             </center>
                         </td>
                     </tr>
